                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 30-12-2005 fixed: Port numbers in Karaoke settings didn't match port numbers in System Info.
 - 30-12-2005 changed: Skin slide start positions are relative as of skin version 1.86.  PM3 updated to 1.86
 - 30-12-2005 added: Conditional window origins for dialogs.
 - 30-12-2005 fixed: [1387719] Stacking of non-english names.
 - 30-12-2005 fixed: Seek to end of song with right thumb stick resulted in the current song details not being updated.
 - 30-12-2005 added: Builtin functions SetVolume(percent) and Mute.
 - 30-12-2005 added: Info values for Player.GetVolume (int + label) and for Player.IsMuted (bool)
 - 30-12-2005 fixed: Some out effects or later in effects wouldn't render for some controls.
 - 30-12-2005 fixed: [1391885] - Extracting rar in my files with the copy reproduces bad dirs.
 - 30-12-2005 fixed: possible buffer overflows in some IFile::ReadString implementations
 - 30-12-2005 changed: moved dvd tray state to media window base class
 - 29-12-2005 added: Play action on a folder in videos will build internal playlist recursively and start playing immediately
 - 29-12-2005 fixed: Strange navigation and sorting issues.
 - 29-12-2005 fixed: xbmc in infinite loop due to a playlist full of unplayable items
 - 29-12-2005 fixed: lockup when switching between music and playlist window
 - 29-12-2005 fixed: Sorting in My Files was incorrect.
 - 29-12-2005 fixed: [1392003] My Pictures Context Menu Bug.
 - 29-12-2005 fixed: [site command: notificaton typo.
 - 28-12-2005 changed: Effect times are now calculated after items have been rendered once.
 - 28-12-2005 added: ListItem.Thumb and ListItem.Label to the InfoManager.